fixed extra space

--- a/src/components/HeroSection/hero.css
+++ b/src/components/HeroSection/hero.css
@@ -1,6 +1,6 @@
 #HeroSection{
     /* background-color: aqua; */
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     /* justify-content: space-around; */
